<resources>
    <string name="app_name">Kamus Lengkap</string>
    <string name="rincian">Detail</string>
    <string name="terjemahan">Translate :</string>
    <string name="first_run">First Run</string>
    <string name="telusuri_kata">Search for words</string>
    <string name="staKata">Kata</string>
    <string name="stTerjemahan">Terjemahan</string>
    <string name="stIdEn">ID-EN</string>
    <string name="stEnId">EN-ID</string>
    <string name="message_exit">Press again to exit!</string>
    <string name="memuad_data">Loading data</string>
    <string name="mohon_tunggu">Please wait</string>
    <string name="about">About</string>
    <string name="about_application">About Application</string>
    <string name="copyright">Copyright © 2019. Gusti Ngurah Mertayasa</string>
    <string name="application_name">Application name</string>
    <string name="version">Version</string>
    <string name="update">Update</string>
    <string name="updateV">January 2019</string>
    <string name="versi_app">1.1</string>
    <string name="pilih_bahasa">Select a language</string>
    <string name="txt_bahasa">Language</string>
    <string name="information">Information</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
</resources>
