<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CoordinatorAtas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundTab">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:text=" "
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light" />

            <TextView
                android:id="@+id/titleBar"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/about_application"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/ScrollNested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutatasTentang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageViewzo2"
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_bg"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/copyright"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/backgroundTab">

                <TextView
                    android:id="@+id/txt01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"
                    android:text="@string/about_application"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/txt01"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:id="@+id/Relative1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt01"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@id/imageView3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/application_name"
                        android:textColor="@color/text_standar"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text=" : "
                        android:textColor="@color/text_standar"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@id/txt1"
                        android:enabled="false"
                        android:text="@string/app_name"
                        android:textColor="@color/text_standar"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Relative2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Relative1"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@id/imageView3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt11"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:enabled="false"
                        android:text="@string/version"
                        android:textColor="@color/text_standar"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:enabled="false"
                        android:text=" : "
                        android:textColor="@color/text_standar"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@id/txt11"
                        android:enabled="false"
                        android:text="@string/versi_app"
                        android:textColor="@color/text_standar"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Relative3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Relative2"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@id/imageView3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt12"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:enabled="false"
                        android:text="@string/update"
                        android:textColor="@color/text_standar"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:enabled="false"
                        android:text=" : "
                        android:textColor="@color/text_standar"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@id/txt12"
                        android:enabled="false"
                        android:text="@string/updateV"
                        android:textColor="@color/text_standar"
                        android:textSize="14sp" />
                </LinearLayout>

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:text="" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>