<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundTab">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="exitUntilCollapsed|snap">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light" />

            <TextView
                android:id="@+id/titleBar"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:id="@+id/scTampilan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/crLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="0dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="20dp"
                                android:layout_weight="5"
                                android:gravity="center_vertical"
                                android:text="@string/language"
                                android:textColor="@color/colorText"
                                android:textSize="18dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="20dp"
                            android:background="@color/backgroundTab2" />

                        <RelativeLayout
                            android:id="@+id/klikLanguage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground">

                            <ImageView
                                android:id="@+id/imgLanguage"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="20dp"
                                android:layout_alignParentStart="true"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                android:padding="5dp"
                                android:src="@drawable/language" />

                            <TextView
                                android:id="@+id/txtBahasa"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_toEndOf="@id/imgLanguage"
                                android:text="@string/txt_bahasa"
                                android:textColor="@color/colorText"
                                android:textSize="15dp" />

                            <TextView
                                android:id="@+id/txtPilihBahasa"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_below="@id/txtBahasa"
                                android:layout_toEndOf="@id/imgLanguage"
                                android:text="@string/pilih_bahasa"
                                android:textColor="@color/text_standar"
                                android:textSize="12dp" />

                        </RelativeLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>